# dprep

./: .devcontainer.json  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  workflow.yml
src/: __init__.py  main.py
src/csvtoparquet/: main.py
src/ndpprep/azure/: .env.example  decrypt_landing_to_raw.py  report.py  sftp_to_landing.py  sftp_to_raw.py
src/ndpprep/cdsw/: encrypt_to_sftp.py
src/ndpprep/cli/: __init__.py  main.py  settings.py
src/ndpprep/decryption/: __init__.py  main.py
src/ndpprep/encryption/: __init__.py  main.py
src/ndpprep/inventory/: main.py
src/ndpprep/masked/: __init__.py  main.py
src/ndpprep/process_data/: __init__.py  main.py
src/ndpprep/refactor_pipeline/: common.py  main.py  pipeline.py  process.py  read.py  util.py
src/ndpprep/save_sftp/: __init__.py  main.py  remove_batch.txt
src/ndpprep/scheduled_process/: common.py  main.py  process.py  util.py
src/ndpprep/secret_key/: __init__.py  main.py  secret_key.txt
src/ndpprep/shp_file/: __init__.py  main.py  mygeospatial.py
src/ndpprep/target_schema/: __init__.py  granite.py  neps.py  nis.py  schema_config.yaml
src/ndpprep/unmask/: __init__.py  main.py
tests/: test_hello.py
