[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csvtoparquet15"
version = "0.0.1"
authors = [
    { name="Zaid Waqi", email="zaidwaqi@gmail.com" },
]
description = "A command line tool to convert csv to parquet"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pyarrow>=14.0.0"
]

[project.urls]
Homepage = "https://github.com/zaidwaqi/csvtoparquet"
Issues = "https://github.com/pypa/zaidwaqi/csvtoparquet/issues"

[project.scripts]
csvtoparquet = "csvtoparquet.main:main"